fixed calendar overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -576,7 +576,6 @@ footer {
     margin-top: 0; /* 1 */
     padding-left: 0;
     padding-top: 2em; /* 2 */
-    width: 100%;
 }
 
 [id="calendar"] > ol > li {
